fix reference in intro

--- a/howto_hnr/howto_hnr.ipynb
+++ b/howto_hnr/howto_hnr.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "The following introduction to historical network analysis with Python is based on contents provided by [Demi Vasques](https://github.com/dvasques83) in the context of the [DH Lab at the Leibniz Institute of European History HNR Winter School](https://github.com/ieg-dhr/hnr-winterschool-2022), 28 Nov-1 Dec 2022.\n",
     "\n",
-    "This Jupyter Notebook file exemplifies the practical application of key concepts of HNR in Python. The dataset (not double-checked, potentially messy; see ln 55 for specific problems in the dataset) has been extracted from a historical source edited in the context of the [Auden Musulin Papers](https://github.com/Auden-Musulin-Papers) digital edition project: it records instances of interaction in British-American poet W. H. Auden's Austrian period 1958-1973 as represented in Stella Musulin's memoir [*The Years in Austria*](https://amp.acdh.oeaw.ac.at/amp-transcript__0062.html)."
+    "This Jupyter Notebook file exemplifies the practical application of key concepts of HNR in Python. The dataset (not double-checked, potentially messy; see 3.1 below for specific problems in the dataset) has been extracted from a historical source edited in the context of the [Auden Musulin Papers](https://github.com/Auden-Musulin-Papers) digital edition project: it records instances of interaction in British-American poet W. H. Auden's Austrian period 1958-1973 as represented in Stella Musulin's memoir [*The Years in Austria*](https://amp.acdh.oeaw.ac.at/amp-transcript__0062.html)."
    ]
   },
   {
